Tabela de clientes pronta com todos os botoes funcionando

--- a/src/view/PHSP_JDlgUsuarios.form
+++ b/src/view/PHSP_JDlgUsuarios.form
@@ -44,14 +44,13 @@
                               <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jCboNivel" min="-2" pref="103" max="-2" attributes="0"/>
+                                  <Component id="jCboNivel" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <EmptySpace pref="6" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jFmtDataDeNascimento" min="-2" pref="251" max="-2" attributes="0"/>
                                   <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
