terminei a tabela de vendas e vendas produtos, vou começar a colocar doubleClick nas tabelas de pesquisa

--- a/src/view/PHSP_JDlgVendasProdutos.form
+++ b/src/view/PHSP_JDlgVendasProdutos.form
@@ -106,6 +106,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTxtQuantidade">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTxtQuantidadeKeyReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jTxtValorUnitario">
     </Component>
@@ -154,6 +157,9 @@
           <StringArray count="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCboProdutosActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Phspprodutos&gt;"/>
       </AuxValues>
